feat: hero section + top features section

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,1 +1,9 @@
-@import "tailwindcss"
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+
+@import "tailwindcss";
+
+@theme {
+	--font-display: "Geist", sans-serif;
+	--font-heading: "Instrument Serif";
+}
